--- a/src/UserSideBar.css
+++ b/src/UserSideBar.css
@@ -4,4 +4,35 @@
     border: 1px solid #aaa;
     width: 33vw;
     padding: 10px;
+    flex-direction: column;
+}
+
+.UserSideBar--header {
+    width: 100%;
+    height: 3rem;
+    background-color: #eee;
+    text-align: center;
+}
+
+.UserSideBar--list {
+    list-style: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.UserSideBar--list-item {
+    padding: 1rem;
+    background-color: #ddd;
+    font-size: 1.1rem;
+}
+
+.UserSideBar--list-item button {
+    background-color: #008CBA;
+    color: white;
+    border: none;
+    padding: 1rem;
+    width: 100%;
+    font-size: 1.25rem;
+    cursor: pointer; 
 }
