--- a/src/UserInformation.css
+++ b/src/UserInformation.css
@@ -2,5 +2,30 @@
     padding: 30px;
     height: 100vh;
     width: 67vw;
+    display: flex;
+    flex-direction: column;
+}
+
+.UserInformation--header {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 1rem;
+    width: 100%;
+}
+
+.UserInformation--avatar {
+    width: 30%;
     
+}
+
+.UserInformation--avatar-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Helpers */
+.vertical-center {
+    align-self: center;
 }
