added basic metrics to the user information component

--- a/src/UserInformation.css
+++ b/src/UserInformation.css
@@ -13,6 +13,11 @@
     width: 100%;
 }
 
+.UserInformation--header small {
+    font-size: 0.75rem;
+    color: #aaa;
+}
+
 .UserInformation--avatar {
     width: 30%;
     
